# OOP_labs

./: .gitignore  .gitmodules  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: lab1.h
lab1/src/: lab1.cpp
lab1/tests/: test_lab1.cpp
lab4/: .gitignore  CMakeLists.txt  figures.cpp  figures.hpp  main.cpp
lab4/tests/: test_lab4.cpp
